# opera

./: AUTHORS  ChangeLog  DEPENDENCIES  INSTALLATION  LICENSE  Makefile.am  Makefile.in  NEWS  README  TIMESTAMP  config.h  configure  configure.ac  setup.sh  stamp-h1
autoconf/: autogen.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
config/: upena_tel  wavelengthMaskForContinuumDetection.bkp.txt  wavelengthMaskForRefContinuumDetection.txt  wavelengthMaskForTelluricAbsorption.txt  wavelengthMaskForUncalContinuumDetection.txt
doc/: Doxyfile  Makefile  Makefile.sav  README
harness/: Makefile
harness/espadons/: Makefile.analysis  Makefile.calibration  Makefile.configuration  Makefile.core  Makefile.parameters  Makefile.upena  Makefile.util
harness/graces/: Makefile.analysis  Makefile.calibration  Makefile.configuration  Makefile.core  Makefile.parameters  Makefile.upena  Makefile.util
harness/guest/: Makefile.analysis  Makefile.calibration  Makefile.configuration  Makefile.core  Makefile.parameters  Makefile.util
harness/wircam/: Makefile.analysis  Makefile.calibration  Makefile.configuration  Makefile.core  Makefile.parameters  Makefile.util
include/: globaldefines.h  operaError.h
include/analysis-espadons/: operaBinFluxData.h  operaRadialVelocity.h
include/core-espadons/: operaBarycentricWavelengthCorrection.h  operaBias.h  operaCalculateSpectralResolution.h  operaCentricWavelengthCorrection.h  operaCreateFlatFieldFluxCalibration.h  operaCreateFluxCalibration.h  operaCreateProduct.h  operaEchelleDispersionCalibration.h  operaExtractSpectralLines.h  operaExtraction.h  operaExtractionApertureCalibration.h  operaFluxCalibration.h  operaGain.h  operaGenerateLEFormats.h  operaGeometryCalibration.h  operaHeliocentricWavelengthCorrection.h  operaInstrumentEnvironmentSetup.h  operaInstrumentProfileCalibration.h  operaMasterBias.h  operaMasterCalibration.h  operaMasterComparison.h  operaMasterFabPerot.h  operaMasterFlat.h  operaMasterFluxCalibration.h  operaNormalize.h  operaNormalizeAcrossOrders.h  operaObjectInTheSkySetup.h  operaObservingConditionsSetup.h  operaOrderSpacingCalibration.h  operaPixelSensitivityMap.h  operaPolar.h  operaPolarIntensity.h  operaPolarimetryCorrection.h  operaReductionSet.h  operaSNR.h  operaSpectrographSetup.h  operaStarOnly.h  operaStarPlusSky.h  operaStitchOrders.h  operaTelescopeSetup.h  (+2 more)
include/core-wircam/: wirAstrometry.h  wirCreateSky.h  wirCreateZeroPoints.h  wirDetrend.h  wirMasterDark.h  wirMasterTwilightFlat.h  wirPhotometry.h  wirPickSkies.h  wirPickTwilightFlats.h  wirSkyFlat.h  wirSubtractSky.h  wirTwilightFlat.h
include/libraries/: ArgumentHandler.h  GainBiasNoise.h  Gaussian.h  PixelSet.h  (+42 more)
scripts/: Makefile.am  Makefile.in  domacmake  operaPristine  operacount  operadiff  operafind  operafindheader  operafindword  operafitsverify  operagetword  operagetwords  operagnuplot  operainstallweb  operalinecount  operaslice  operasplit  operasublist  operatrace  operatrim
scripts/espadons/: Makefile.am  Makefile.in  ds9opera  espgetobscomment  espqldaemon  opera.sh  operagetamplifier  operagetdetector  operagetgainnoise  operagetmode  operagetpolarquad  operagetpolarsequence  operagetspeed  operagetstokes  operareport
sofa/: makefile
src/core-guest/: Makefile.am  Makefile.in  extraction.cpp
test/: FITSImageVectorTest.cpp  Makefile.am  Makefile.in  SBIGtest.cpp  basicFITSImageTest.cpp  gzstreamtest.cpp  nancheck.cpp  operaAOBImageTest.cpp  operaAsmTest.cpp  operaConfigurationAccesstest.cpp  operaCreateInstrumentEnvironmentSetup.cpp  operaCreateInstrumentEnvironmentSetup.h  operaCubeTest.cpp  operaEspadonsImageTest.cpp  operaExtractionApertureTest.cpp  operaFITSImageTest.cpp  operaFITSProductTest.cpp  operaFITSSubImageTest.cpp  operaFluxVectorTest.cpp  operaGeometricShapesTest.cpp  operaImageOperatorTest.cpp  operaMEFCubeTest.cpp  operaMEFFITSImageTest.cpp  operaNICIImageTest.cpp  operaNIFSImageTest.cpp  operaOESTest.cpp  operaPolarTest.cpp  operaPolarimetryTest.cpp  operaSextractorTest.cpp  operaWIRCamImageTest.cpp  operastringstreamtest.cpp  sitelletest.cpp
(+256 files in other folders)
