#
# espadons-specific bash helper scripts for opera
#
bin_SCRIPTS = operagetgainnoise operagetstokes operagetpolarquad operagetamplifier \
	operagetdetector operagetmode operagetspeed operareport ds9opera operagetpolarsequence \
	espgetobscomment espxexpdb espdimm espskyprobe operachecksnr espqldaemon \
	espcreatewaimealinkdirectory
